force-app/main/default/objects/Order_Item__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>