force-app/main/default/objects/Order_Item__c/fields/Unit_Price_New__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_New__c</fullName>
    <label>Unit Price New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>